created welcome page

--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
     <title>Tsakh Iryna</title>
   </head>
   <body>
-    <h1>Hello World</h1>
-    <p>This is my new project</p>
+    <div class="hero">
+      <p>✋Hello, I am</p>
+      <h1>Iryna Tsakh</h1>
+      <h2>Front-end developer, based in Ukraine</h2>
+      <a href="#" class="btn btn-branding">Contact me</a>
+    </div>
   </body>
 </html>
