--- a/index.html
+++ b/index.html
@@ -35,5 +35,20 @@
       <h2>Front-end developer, based in Ukraine</h2>
       <a href="#" class="btn btn-branding">Contact me</a>
     </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+          <img src="/images/Bali.jpg" alt="" />
+        </div>
+        <div class="col-sm-6">
+          <p>
+            Landing page for travellers. The user can learn more about Bali
+            island and book the trip. This page was completed as part of the
+            SheCodes Basics course. Built with HTML, CSS, and JavaScript.
+          </p>
+          <a href=""></a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
