--- a/index.html
+++ b/index.html
@@ -38,15 +38,45 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <img src="/images/Bali.jpg" alt="" />
+          <img
+            src="/images/Bali.jpg"
+            alt="Bali.Gates.photo"
+            class="img-fluid shadow rounded mb-5"
+          />
         </div>
         <div class="col-sm-6">
-          <p>
+          <h2>Travel the World</h2>
+          <p class="text-muted">
             Landing page for travellers. The user can learn more about Bali
             island and book the trip. This page was completed as part of the
             SheCodes Basics course. Built with HTML, CSS, and JavaScript.
           </p>
           <a href=""></a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-6">
+          <h2>Weather App</h2>
+          <p class="text-muted">
+            A real-time weather application that allows the user to search for
+            the weather and 6-day forecast in any location. The weather and
+            forecast data is implemented with OpenWeather API. This application
+            was completed as part of the SheCodes Plus course. Built with HTML,
+            CSS, JavaScript, API, and Bootstrap.
+          </p>
+          <a
+            href="https://imaginative-pudding-5c840a.netlify.app"
+            class="btn btn-branding"
+            target="_blank"
+            >Launch app</a
+          >
+        </div>
+        <div class="col-sm-6">
+          <img
+            src="/images/weather.app.jpg"
+            alt="weather.app.photo"
+            class="img-fluid shadow rounded"
+          />
         </div>
       </div>
     </div>
