--- a/index.html
+++ b/index.html
@@ -45,31 +45,40 @@
           />
         </div>
         <div class="col-sm-6">
-          <h2>Travel the World</h2>
-          <p class="text-muted">
-            Landing page for travellers. The user can learn more about Bali
-            island and book the trip. This page was completed as part of the
-            SheCodes Basics course. Built with HTML, CSS, and JavaScript.
-          </p>
-          <a href=""></a>
+          <div class="description">
+            <h2 class="mb-5">Travel the World</h2>
+            <p class="text-muted">
+              Landing page for travellers. The user can learn more about Bali
+              island and book the trip. This page was completed as part of the
+              SheCodes Basics course. Built with HTML, CSS, and JavaScript.
+            </p>
+            <a
+              href="https://www.shecodes.io/workshops/shecodes-basics-462568a2-9f1f-4718-b5b0-9cf76e0653aa/projects/927280"
+              class="btn project-btn mb-3"
+              target="_blank"
+              >Learn more</a
+            >
+          </div>
         </div>
       </div>
       <div class="row">
         <div class="col-sm-6">
-          <h2>Weather App</h2>
-          <p class="text-muted">
-            A real-time weather application that allows the user to search for
-            the weather and 6-day forecast in any location. The weather and
-            forecast data is implemented with OpenWeather API. This application
-            was completed as part of the SheCodes Plus course. Built with HTML,
-            CSS, JavaScript, API, and Bootstrap.
-          </p>
-          <a
-            href="https://imaginative-pudding-5c840a.netlify.app"
-            class="btn btn-branding"
-            target="_blank"
-            >Launch app</a
-          >
+          <div class="description">
+            <h2 class="mb-5">Weather App</h2>
+            <p class="text-muted">
+              A real-time weather application that allows the user to search for
+              the weather and 6-day forecast in any location. The weather and
+              forecast data is implemented with OpenWeather API. This
+              application was completed as part of the SheCodes Plus course.
+              Built with HTML, CSS, JavaScript, API, and Bootstrap.
+            </p>
+            <a
+              href="https://imaginative-pudding-5c840a.netlify.app"
+              class="btn project-btn mb-3"
+              target="_blank"
+              >Launch app</a
+            >
+          </div>
         </div>
         <div class="col-sm-6">
           <img
@@ -80,5 +89,6 @@
         </div>
       </div>
     </div>
+    <footer></footer>
   </body>
 </html>
