--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <p>✋Hello, I am</p>
       <h1>Iryna Tsakh</h1>
       <h2>Front-end developer, based in Ukraine</h2>
-      <a href="#" class="btn btn-branding">Contact me</a>
+      <a href="/about.html" class="btn btn-branding">About me</a>
     </div>
     <div class="container">
       <div class="row">
