--- a/about.html
+++ b/about.html
@@ -29,10 +29,10 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="container about-section">
+    <div class="container content-section">
       <div class="row">
         <div class="col-sm-6">
-          <div class="about-content">
+          <div class="content">
             <h1>Hi, I'm Iryna Tsakh</h1>
             <h2 class="mt-3">Frontend developer, based in Ukraine</h2>
             <p class="text-muted mt-5">
