--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,34 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/styles/src.css" />
-    <title>Document</title>
+    <title>My works</title>
   </head>
-  <body></body>
+  <body>
+    
+    <div class="container">
+    <div class="content-section">
+      <h1 class="mb-3 text-center">
+        Take a look at what I've been working on!
+      </h1>
+      <div class="row">
+        <div class="col-sm-6">
+          <img src="/images/Bali.jpg" alt="" class="img-fluid rounded mb-3" />
+          <h3 class="text-center mt-0">Travel the World</h3>
+          <p class="text-center text-muted">Built using CSS and HTML</p>
+        </div>
+        <div class="col-sm-6">
+          <img
+            src="/images/weather.app.jpg"
+            alt=""
+            class="img-fluid rounded mb-3"
+          />
+          <h3 class="text-center mt-0">Weather App</h3>
+          <p class="text-center text-muted">
+            Built using CSS, HTML and JavaScript
+          </p>
+        
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
