added the header

--- a/index.html
+++ b/index.html
@@ -29,6 +29,19 @@
     <title>Tsakh Iryna</title>
   </head>
   <body>
+    <nav>
+      <div class="container">
+        <div class="d-flex justify-content-between">
+          <img src="/images/logo.png" alt="logo" class="logo" />
+          <ul>
+            <li class="active"><a href="/">Home</a></li>
+            <li><a href="/about.html">About</a></li>
+            <li><a href="/projects.html">Works</a></li>
+            <li><a href="/contact.html">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <div class="hero">
       <p>✋Hello, I am</p>
       <h1>Iryna Tsakh</h1>
