--- a/index.html
+++ b/index.html
@@ -101,7 +101,35 @@
           />
         </div>
       </div>
+      <footer>
+        <div
+          class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
+        >
+          <div>
+            <h4>Work inquiry</h4>
+            <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a href="/contact.html" class="btn btn-branding mt-3">Contact me</a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a href="mailto:tsachirina@gmail.com" class="email-link"
+            >tsachirina@gmail.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center mb-5">
+          <a href="https://www.linkedin.com/in/iryna-tsakh-3b4463237"
+            ><i class="fab fa-linkedin"></i
+          ></a>
+          <a href="https://github.com/IrinaTsakh"
+            ><i class="fab fa-github"></i
+          ></a>
+          <a href="https://www.facebook.com/irena.tsakh"
+            ><i class="fab fa-facebook-f"></i
+          ></a>
+        </div>
+      </footer>
     </div>
-    <footer></footer>
   </body>
 </html>
