--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <img src="/images/logo.png" class="logo" alt="" />
+        <a href="/"> <img src="/images/logo.png" class="logo" alt="" /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -61,7 +61,7 @@
         </div>
       </div>
     </nav>
-    <div class="container">
+    <div class="container text-center">
       <div class="content-section">
         <h1 class="mb-3 text-center">Let's get in touch!</h1>
         <h3>Email</h3>
