--- a/index.html
+++ b/index.html
@@ -119,13 +119,15 @@
           >
         </div>
         <div class="social-links d-flex justify-content-center mb-5">
-          <a href="https://www.linkedin.com/in/iryna-tsakh-3b4463237"
+          <a
+            href="https://www.linkedin.com/in/iryna-tsakh-3b4463237"
+            target="_blank"
             ><i class="fab fa-linkedin"></i
           ></a>
-          <a href="https://github.com/IrinaTsakh"
+          <a href="https://github.com/IrinaTsakh" target="_blank"
             ><i class="fab fa-github"></i
           ></a>
-          <a href="https://www.facebook.com/irena.tsakh"
+          <a href="https://www.facebook.com/irena.tsakh" target="_blank"
             ><i class="fab fa-facebook-f"></i
           ></a>
         </div>
