--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <img src="/images/logo.png" class="logo" alt="" />
+        <a href="/"><img src="/images/logo.png" class="logo" alt="" /></a>
         <button
           class="navbar-toggler"
           type="button"
