made site SEO friendly

--- a/contact.html
+++ b/contact.html
@@ -26,12 +26,14 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/styles/src.css" />
-    <title>My works</title>
+    <title>Contact Iryna Tsakh</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a href="/"> <img src="/images/logo.png" class="logo" alt="" /></a>
+        <a href="/">
+          <img src="/images/logo.png" class="logo" alt="" title="homepage"
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -67,10 +69,18 @@
         <h3>Email</h3>
         <p><a href="mailto:tsachirina@gmail.com">tsachirina@gmail.com</a></p>
         <h3>Facebook</h3>
-        <p><a href="https://www.facebook.com/irena.tsakh">irena.tsakh</a></p>
+        <p>
+          <a
+            href="https://www.facebook.com/irena.tsakh"
+            title="Facebook profile"
+            >irena.tsakh</a
+          >
+        </p>
         <h3>Linkedin</h3>
         <p>
-          <a href="https://www.linkedin.com/in/iryna-tsakh-3b4463237"
+          <a
+            href="https://www.linkedin.com/in/iryna-tsakh-3b4463237"
+            title="Linkedin profile"
             >Iryna Tsakh</a
           >
         </p>
