--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Tsakh Iryna is a beginner frontend developer, based in Ukraine"
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -26,7 +31,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/styles/src.css" />
-    <title>Tsakh Iryna</title>
+    <title>Frontend developer-Tsakh Iryna</title>
   </head>
   <body>
     <nav>
@@ -122,12 +127,19 @@
           <a
             href="https://www.linkedin.com/in/iryna-tsakh-3b4463237"
             target="_blank"
+            title="Linkedin profile"
             ><i class="fab fa-linkedin"></i
           ></a>
-          <a href="https://github.com/IrinaTsakh" target="_blank"
+          <a
+            href="https://github.com/IrinaTsakh"
+            target="_blank"
+            title="GitHub profile"
             ><i class="fab fa-github"></i
           ></a>
-          <a href="https://www.facebook.com/irena.tsakh" target="_blank"
+          <a
+            href="https://www.facebook.com/irena.tsakh"
+            target="_blank"
+            title="Facebook profile"
             ><i class="fab fa-facebook-f"></i
           ></a>
         </div>
