--- a/projects.html
+++ b/projects.html
@@ -26,12 +26,12 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/styles/src.css" />
-    <title>My works</title>
+    <title>Tsakh Iryna's works</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a href="/"><img src="/images/logo.png" class="logo" alt="" /></a>
+        <a href="/"><img src="/images/logo.png" class="logo" alt="" title="homepage" /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -86,5 +86,36 @@
         </div>
       </div>
     </div>
+     <footer>
+        <div
+          class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
+        >
+          <div>
+            <h4>Work inquiry</h4>
+            <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a href="/contact.html" class="btn btn-branding mt-3">Contact me</a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a href="mailto:tsachirina@gmail.com" class="email-link"
+            >tsachirina@gmail.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center mb-5">
+          <a
+            href="https://www.linkedin.com/in/iryna-tsakh-3b4463237"
+            target="_blank" title="Linkedin profile"
+            ><i class="fab fa-linkedin"></i
+          ></a>
+          <a href="https://github.com/IrinaTsakh" target="_blank" title="GitHub profile"
+            ><i class="fab fa-github"></i
+          ></a>
+          <a href="https://www.facebook.com/irena.tsakh" target="_blank" title="Facebook profile"
+            ><i class="fab fa-facebook-f"></i
+          ></a>
+        </div>
+      </footer>
   </body>
 </html>
