--- a/index.html
+++ b/index.html
@@ -144,6 +144,14 @@
           ></a>
         </div>
       </footer>
+      <p class="text-center mb-3">
+        ✌️ This website was coded by Iryna Tsakh, and is
+        <a
+          href="https://github.com/IrinaTsakh/portfolio-responsive/"
+          target="_blank"
+          >open-sourced</a
+        >
+      </p>
     </div>
   </body>
 </html>
